--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     </div>
     <script src="https://unpkg.com/vanilla-picker@2"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>
-    <script src="heartsscript.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
